--- a/crds/openshift-deploymentconfig.json
+++ b/crds/openshift-deploymentconfig.json
@@ -1,5 +1,5 @@
 {
-	"github.com/adnovum/kustomize-openshift/dc.openshift.io.v1.DeploymentConfig": {
+	"github.com/adnovum/kustomize-openshift/route.openshift.io.v1.DeploymentConfig": {
 		"Schema": {
 			"description": "This is a fake CRD description to make kustomize fix OpenShift DeploymentConfig resources. See: https://github.com/adnovum/kustomize-openshift",
 			"properties": {
@@ -13,15 +13,19 @@
 					"$ref": "k8s.io/apimachinery/pkg/apis/meta/v1.ObjectMeta"
 				},
 				"spec": {
-					"$ref": "github.com/adnovum/kustomize-openshift/dc.openshift.io.v1.DeploymentConfigSpec"
+					"$ref": "github.com/adnovum/kustomize-openshift/route.openshift.io.v1.DeploymentConfigSpec"
 				}
 			}
 		}
 	},
-	"github.com/adnovum/kustomize-openshift/dc.openshift.io.v1.DeploymentConfigSpec": {
+	"github.com/adnovum/kustomize-openshift/route.openshift.io.v1.DeploymentConfigSpec": {
 		"Schema": {
 			"properties": {
 				"template/spec/volumes/configMap": {
+					"x-kubernetes-object-ref-api-version": "v1",
+					"x-kubernetes-object-ref-kind": "ConfigMap"
+				},
+				"template/spec/containers/envFrom/configMapRef": {
 					"x-kubernetes-object-ref-api-version": "v1",
 					"x-kubernetes-object-ref-kind": "ConfigMap"
 				}
